--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,25 @@
 Package: euroleaguer
 Type: Package
-Title: What the Package Does (Title Case)
+Title: 'Euroleague basketball API' R Client
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: 
+    c(person(given = "Flavio", family = "Leccese", email = "flavioleccese92@gmail.com", role = c("aut", "cre")))
+Maintainer: Flavio Leccese <flavioleccese92@gmail.com>
+Description: Unofficial API wrapper for Euroleage basketball data (<https://www.euroleaguebasketball.net/euroleague/>)
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 URL: https://flavioleccese92.github.io/euroleaguer/
+Imports:
+  tidyr,
+  dplyr,
+  httr,
+  jsonlite,
+  scales,
+  glue,
+  cli,
+  lubridate,
+  stringr
+VignetteBuilder: knitr
+Roxygen: list(markdown = TRUE)
