--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Authors@R: 
     c(person(given = "Flavio", family = "Leccese", email = "flavioleccese92@gmail.com", role = c("aut", "cre")))
 Maintainer: Flavio Leccese <flavioleccese92@gmail.com>
-Description: Unofficial API wrapper for Euroleage basketball data (<https://www.euroleaguebasketball.net/euroleague/>)
+Description: Unofficial API wrapper for Euroleage basketball data (https://www.euroleaguebasketball.net/euroleague/)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -20,6 +20,7 @@ Imports:
     glue,
     cli,
     lubridate,
-    stringr
+    stringr,
+    tibble
 VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
