--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ export(getGamePlayByPlay)
 export(getGamePlayers)
 export(getGamePoints)
 export(getGameRound)
+export(getTeam)
 importFrom(dplyr,"%>%")
