--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Unofficial API wrapper for EuroLeague and EuroCup basketball. Real-
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.0
 URL: https://flavioleccese92.github.io/euroleaguer/
 Imports:
     dplyr,
@@ -18,7 +18,9 @@ Imports:
     cli,
     lubridate,
     stringr,
-    tibble
+    tibble,
+    glue,
+    tidyr
 VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
 Suggests: 
