added getTeamGames and fixed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(getGamePlayers)
 export(getGamePoints)
 export(getGameRound)
 export(getTeam)
+export(getTeamGames)
 export(getTeamPeople)
 importFrom(dplyr,"%>%")
