--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(getGamePlayByPlay)
 export(getGamePlayers)
 export(getGamePoints)
 export(getGameRound)
+export(getPlayerAdvanced)
 export(getPlayerStats)
 export(getTeam)
 export(getTeamGames)
