--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(getGamePlayers)
 export(getGamePoints)
 export(getGameRound)
 export(getPlayerAdvanced)
+export(getPlayerMisc)
 export(getPlayerStats)
 export(getTeam)
 export(getTeamGames)
