--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(getGamePoints)
 export(getGameRound)
 export(getPlayerAdvanced)
 export(getPlayerMisc)
+export(getPlayerPoints)
 export(getPlayerStats)
 export(getTeam)
 export(getTeamGames)
