--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(getPlayerPoints)
 export(getPlayerStats)
 export(getTeam)
 export(getTeamGames)
+export(getTeamLeadStats)
 export(getTeamPeople)
 export(getTeamStats)
 importFrom(dplyr,"%>%")
