added 2 more competition functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ export(getCompetitionCalendar)
 export(getCompetitionGames)
 export(getCompetitionHistory)
 export(getCompetitionMargins)
+export(getCompetitionPhases)
 export(getCompetitionRounds)
 export(getCompetitionStandings)
 export(getCompetitionStreaks)
+export(getCompetitionTeams)
 export(getGameBoxScore)
 export(getGameEvolution)
 export(getGameHeader)
