--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,6 @@
 url: https://flavioleccese92.github.io/euroleaguer/
 template:
-  bootstrap: 5
+  bootstrap: 5s
   bslib:
     base_font: {google: "Lato"}
     heading_font: {google: "Inconsolata"}
@@ -29,7 +29,7 @@ home:
 docsearch:
   search:
 reference:
-- title: Competition overview
+- title: Competition
   contents:
   - getCompetitionHistory
   - getCompetitionPhases
