--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,6 @@
 url: https://flavioleccese92.github.io/euroleaguer/
 template:
-  bootstrap: 5s
+  bootstrap: 5
   bslib:
     base_font: {google: "Lato"}
     heading_font: {google: "Inconsolata"}
