--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
-URL: https://flavioleccese92.github.io/euroleaguer/
+URL: https://github.com/FlavioLeccese92/euroleaguer/
 Imports:
     dplyr,
     httr,
