--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,3 +26,5 @@ Roxygen: list(markdown = TRUE)
 Suggests: 
     knitr,
     rmarkdown
+Config/Needs/website: euroleaguer, tidyr, dplyr, ggplot2, ggtext, showtext, ggimage, 
+geomtextpath, hexbin, elementalist
