added also to pkgdown

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -35,6 +35,7 @@ articles:
   contents:
   - articles/team-stats-court
   - articles/team-stats-radar
+  - articles/team-standings-race
 
 reference:
 
