--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,30 +1,33 @@
-Package: euroleaguer
 Type: Package
+Package: euroleaguer
 Title: 'Euroleague basketball API' R Client
 Version: 0.1.0
 Authors@R: 
-    c(person(given = "Flavio", family = "Leccese", email = "flavioleccese92@gmail.com", role = c("aut", "cre")))
+    person("Flavio", "Leccese", , "flavioleccese92@gmail.com", role = c("aut", "cre"))
 Maintainer: Flavio Leccese <flavioleccese92@gmail.com>
-Description: Unofficial API wrapper for EuroLeague and EuroCup basketball. Real-time data enabled.
+Description: Unofficial API wrapper for Euroleague and Eurocup basketball.
+    Real-time data enabled.
 License: MIT + file LICENSE
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.3.1
 URL: https://github.com/FlavioLeccese92/euroleaguer/
 Imports:
+    cli,
     dplyr,
+    glue,
     httr,
     jsonlite,
-    cli,
     lubridate,
     stringr,
     tibble,
-    glue,
     tidyr
-VignetteBuilder: knitr
-Roxygen: list(markdown = TRUE)
 Suggests: 
     knitr,
     rmarkdown
-Config/Needs/website:
-    tidyr, dplyr, ggplot2, ggtext, showtext, ggimage, geomtextpath, hexbin, devtools
+VignetteBuilder: 
+    knitr
+Config/Needs/website: tidyr, dplyr, ggplot2, ggtext, showtext, ggimage,
+    geomtextpath, hexbin, devtools
+Encoding: UTF-8
+Language: en-US
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.1
