--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -30,6 +30,10 @@ docsearch:
   search:
 
 articles:
+- title: Glossary
+  navbar: ~
+  contents:
+  - articles/glossary
 - title: Plots
   navbar: Plots
   contents:
