--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.2.0
 Authors@R: 
     person("Flavio", "Leccese", , "flavioleccese92@gmail.com", role = c("aut", "cre"))
 Maintainer: Flavio Leccese <flavioleccese92@gmail.com>
-Description: Unofficial API wrapper for Euroleague and Eurocup basketball.
+Description: Unofficial API wrapper for 'Euroleague' and 'Eurocup' basketball.
     Real-time data enabled.
 License: MIT + file LICENSE
 URL: https://github.com/FlavioLeccese92/euroleaguer/
