--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Type: Package
 Package: euroleaguer
-Title: 'Euroleague basketball API' R Client
+Title: 'Euroleague basketball API'
 Version: 0.2.0
 Authors@R: 
     person("Flavio", "Leccese", , "flavioleccese92@gmail.com", role = c("aut", "cre"))
 Maintainer: Flavio Leccese <flavioleccese92@gmail.com>
-Description: Unofficial API wrapper for 'Euroleague' and 'Eurocup' basketball.
-    Real-time data enabled.
+Description: Unofficial API wrapper for 'Euroleague' and 'Eurocup' basketball API (<https://www.euroleaguebasketball.net/en/euroleague/>), it allows to retrieve real-time and historical standard and advanced statistics about competition, teams, player and games.
 License: MIT + file LICENSE
 URL: https://github.com/FlavioLeccese92/euroleaguer/
 Imports:
