--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Suggests:
     knitr,
     rmarkdown
 Config/Needs/website: tidyr, dplyr, ggplot2, ggtext, showtext, ggimage,
-    geomtextpath, hexbin, devtoolsm, euroleaguer
+    geomtextpath, hexbin, devtools, euroleaguer
 Encoding: UTF-8
 Language: en-US
 LazyData: true
