--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -40,6 +40,7 @@ articles:
   - articles/team-stats-court
   - articles/team-stats-radar
   - articles/team-standings-race
+  - articles/team-goals-by-time
 
 reference:
 
